[gd_scene load_steps=3 format=3 uid="uid://bdmu5xc41yqp0"]

[ext_resource type="Script" uid="uid://c67ecdpv6uv71" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Theme" id="Theme_vue75"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="Title" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 500.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 200
text = "Pantheon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_vue75")

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "PLAY"

[node name="Settings" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "SETTINGS"

[node name="Credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "CREDITS"

[node name="Quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Back" type="Button" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="Fullscreen" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "FULLSCREEN"

[node name="MainVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/MainVolSlider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MAIN VOLUME"
horizontal_alignment = 1

[node name="MusicVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/MusicVolSlider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="SFXVolSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/SFXVolSlider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "A Game By Beau Desrosiers"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -4096
offset_left = -32.0
offset_top = -32.0
offset_right = 1952.0
offset_bottom = 1112.0
mouse_filter = 2
color = Color(0.721569, 0.584314, 0, 1)

[connection signal="pressed" from="CenterContainer/MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/MainVolSlider" to="." method="_on_main_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/Back" to="." method="_on_back_pressed"]
